# Team_Avatar

./: ..boxes.mat  .boxes.mat  Goalsformidsemesterreport.txt  HowToLabelData.txt  Proposal.txt  README.md  README.txt  averagevote.m  boxes.mat  buoy_databoxes_tommy1.mat  channelNorm.m  colorTextToRgb.m  colorToText.m  confirmBox.m  crossFoldValidation.m  crossFoldValidationLinearSVM.m  cyrusplsrunthis.m  data.mat  dataChannelnb.mat  dataChannelsvm.mat  dataPixelnb.mat  dataPixelsvm.mat  datanb.mat  datanb_16.mat  datasvm.mat  datasvm_16.mat  getColor.m  histogram.m  holdOutValidation.m  kFoldsCrossValidation.m  labelBoxes.m  labeled_.vec  majorityvote.m  makeData.m  makeSynthBoxes.m  makeWeights.m  makeWeights.m~  nb_script.m  nltk_makedata.m  nltk_script.py  (+17 more)
Misclassfied/: BlackNotGreen.fig
Negatives/: nun-all.txt  nun-labels-c0.txt  nun-labels-j0.txt  nun-labels-j1.txt  nun-labels-m1.txt  nun-labels-t0.txt  nun-labels-t1.txt  nun-train.txt  sphere-all.txt  sphere-labels-c0.txt  sphere-labels-c1.txt  sphere-labels-j0.txt  sphere-labels-j1.txt  (+5 more)
Negatives/HaarTraining/code/: CMakeLists.txt  LowerBound.cpp  LowerBound.h  Predict.cpp  PredictMulti.cpp  PruneProcessor.h  PruneRule.h  SingleCascadePredictor.cpp  SingleCascadePredictor.h  UpperBound.cpp  UpperBound.h  boxTest.py  box_test_helper.py  pred3-c30-nun-test.txt  pred3-c30-nun-train.txt  pred3-c30.45-test.txt  pred3-c30.45-train.txt  pred3-c45-sphere-test.txt  pred3-c45-sphere-train.txt  predictions.txt  predictionsColorCutoff-30.txt  predictionsGrayCutoff-25.txt  predictionsGrayCutoff-30.txt  test.txt
(+196 files in other folders)
