cmake_minimum_required(VERSION 2.8)
project( BlurImage )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Predict Predict.cpp )
add_executable( PredictMulti PredictMulti.cpp )
target_link_libraries( Predict ${OpenCV_LIBS} )
target_link_libraries( PredictMulti ${OpenCV_LIBS} )